fix(portal): Fix iOS portals not showing limited to full height of viewport

--- a/packages/site/app.css
+++ b/packages/site/app.css
@@ -1,3 +1,27 @@
+
+html,
+body {
+  max-width: 100vw;
+  overflow-x: hidden;
+  overflow-y: auto;
+  font-family: Inter, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Helvetica, Arial,
+    sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol';
+}
+
+body {
+  background-color: var(--backgroundStrong) !important;
+  scale: 1;
+}
+
+body {
+  margin: 0;
+  overflow: hidden;
+}
+
+* {
+  box-sizing: border-box;
+}
+
 #__next {
   display: flex;
   flex: 1;
@@ -15,28 +39,6 @@ body .preview {
 
 .clip-invisible {
   clip: rect(0, 0, 0, 0);
-}
-
-html,
-body {
-  max-width: 100vw;
-  overflow-x: hidden;
-  overflow-y: auto;
-  font-family: Inter, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Helvetica, Arial,
-    sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol';
-}
-
-body {
-  background-color: var(--backgroundStrong) !important;
-}
-
-body {
-  margin: 0;
-  overflow: hidden;
-}
-
-* {
-  box-sizing: border-box;
 }
 
 a {
